testsuite/tests/typecheck/should_compile/T2572.hs
 {-# LANGUAGE RankNTypes, ScopedTypeVariables #-}

-- #2572

module Foo where

type GTypeFun = forall a . a -> ()

gmapType :: Int -> GTypeFun
gmapType _ (_ :: a) = undefined
